# parser

./: .gitignore  README.md  constants.py  main.py  pyproject.toml  requirements.txt
api/: routers.py  validators.py
api/endpoints/: __init__.py  maxidom.py  obi.py  petrovich.py  vodopad.py
core/: config.py
db/: db.py  models.py
migrations/: env.py
migrations/versions/: 2023_10_29_0848-8695e3753f44_create_all_the_tables.py  2023_11_29_1958-6840c1e4d00b_alter_model_city_removing_unique_flag_.py  2023_11_29_2015-031ca2e65db0_alter_model_product_remove_250_symbols_.py  2023_11_29_2027-8e33fae909d4_remove_all_caracter_varying_constraints_.py
parsing/: main.py
parsing/api/: routers.py
parsing/api/endpoints/: maxidom.py  oboykin.py  vodopad.py
parsing/core/: config.py
parsing/db/: database.py  db.py  models.py  orm.py  t.py
parsing/services/: parser_urls.py
resources/: constants.py
shops/: maxidom.py  obi.py  oboykin.py  petrovich.py  url.py  vodopad.py
