[tool.poetry]
name = "renovation-again"
version = "0.1.0"
description = ""
authors = ["David-Roklem <roklem@mail.ru>"]
readme = "README.md"
packages = [{include = "renovation_again"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
lxml = "^4.9.3"
requests = "^2.31.0"
fake-useragent = "^1.2.1"
annotated-types = "^0.5.0"
beautifulsoup4 = "^4.12.2"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
click = "^8.1.7"
colorama = "^0.4.6"
greenlet = "^2.0.2"
h11 = "^0.14.0"
httptools = "^0.6.0"
idna = "^3.4"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
sniffio = "^1.3.0"
soupsieve = "^2.5"
typing-extensions = "^4.8.0"
urllib3 = "^2.0.5"
uvicorn = "^0.23.2"
watchfiles = "^0.20.0"
websockets = "^11.0.3"
fastapi = "^0.103.1"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
asyncpg = "0.27.0"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
